--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,7 +1,5 @@
 <head>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
-        integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM="
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     </head>
 <h1> Stack Neural Module Network Demo!</h1>
 
@@ -23,8 +21,8 @@
 </datalist>
 <!-- cfg choice -->
 <select name="cfg_id" id="cfg">
-    <option selected value=1>Text answer</option>
-    <option value=2>Bounding box answer</option>
+    <option selected value=0>Text answer</option>
+    <option value=1>Bounding box answer</option>
 </select>
 
 <!-- submit button -->
@@ -34,12 +32,15 @@
 <!-- display image -->
 <img src="/static/sample_images/CLEVR_test_000000.png" alt="CLEVR image">
 
-
-<!-- program generated -->
-
-<!-- any visualisation generated -->
-
+<div id='results' hidden>
 <!-- final answer -->
+<h3 id='answer'>Predicted Answer: </h3>
+<!-- program generated with viz -->
+<p>Below is the list of modules generated, along with the visualisations:</p>
+<div id='modules'></div>
+
+
+</div>
 <script>
     var imageList = {{ image_filenames|tojson|safe }};
     var question_texts = {{ question_texts|tojson|safe }};
@@ -54,5 +55,26 @@
             var question = questions[i]
             $("#question").append('<option>' + question +'</option>')
         }
+    });
+    $('form').submit(function(e) {
+        e.preventDefault();
+        $.ajax({
+            data: $(this).serialize(),
+            type: $(this).attr('GET'),
+            url: $(this).attr('action'),
+            success: function(json) {
+                $('#results').removeAttr('hidden')
+                $('#answer').text(json.answer);
+                for (var i = 0; i < json.module_list.length; i++) {
+                    var moduleText = '<p>' + json.module_list[i] + '</p>'
+                    var image = '<img src=data:image/jpeg;base64,' + json.image_attns[i] + '>'
+                    $('#modules').append('<div></div>')
+                    $('#modules div:last-child').append(moduleText)
+                    $('#modules div:last-child').append(image)
+                    console.log(image)
+                }
+            }
+        });
+        return false; // cancel original event to prevent form submitting
     });
 </script>
