--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -15,7 +15,7 @@
 <button id="theme-toggle">🌙</button>
 <h1> Stack Neural Module Network Demo</h1>
 
-<p>This is a small barebones demo of the SNMN, from <a href='https://github.com/ronghanghu/snmn'>this paper</a>. I'm using my own reproduction of the paper from this repository. To use, choose an image from the list, and then choose a question to use, or type your own in. You can also choose between a model trained on ground truth layouts or without them. Check out <a href='https://hamishivi.github.io/2021/01/31/snmn'>my blog post</a> for more details!</p>
+<p>This is a small barebones demo of the SNMN, from <a href='https://github.com/ronghanghu/snmn'>this paper</a>. I'm using my own reproduction of the paper from this repository. To use, choose an image from the list, and then choose a question to use, or type your own in. You can also choose between a model trained on ground truth layouts or without them. Check out <a href='https://hamishivi.github.io/2021/01/31/snmn'>my blog post</a> for more details!</p> If the prediction is taking a bit of time to run, just reload the page and try again (sometimes the requests timeout due to slow servers).
 
 <div class="row border" id="form">
     <div class="column">
